fix for pic visibility

--- a/src/bin/asset/css/main.css
+++ b/src/bin/asset/css/main.css
@@ -221,7 +221,7 @@ html, body {
 	background-repeat: no-repeat;
 	background-position: center;
 	top: 0;
-	z-index: -1;
+	z-index: 0;
 }
 
 .fp_take_pic__my_photo {
